force-app/main/default/objects/Game_Changer__c/Game_Changer__c.object-meta.xml
<CustomObject>
    <label>Game Changer</label>
    <nameField>
        <label>Game Changer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Changers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>