force-app/main/default/objects/Game_Changer__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DEF-001855:RTB - OM - Game Changers</description>
    <inlineHelpText>The amount of revenue that will not be achieved based on the original target set</inlineHelpText>
    <label>Cancelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>