force-app/main/default/objects/Game_Changer__c/fields/Comments_on_Progress__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Progress__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <inlineHelpText>Please note: Do not mention any particular client or opportunity name</inlineHelpText>
    <label>Comments on Progress</label>
    <length>32765</length>
    <type>LongTextArea</type>
</CustomField>