force-app/main/default/objects/Game_Changer__c/fields/Deferred__c.field-meta.xml
<CustomField>
    <fullName>Deferred__c</fullName>
    <defaultValue>0</defaultValue>
    <description>US-1391:RTB - OM - Game Changers additional roll up fields</description>
    <inlineHelpText>The amount of revenue that will be achieved next year</inlineHelpText>
    <label>Deferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>