force-app/main/default/objects/Game_Changer__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <inlineHelpText>Please note: Do not mention any particular client or opportunity name</inlineHelpText>
    <label>Detailed Description</label>
    <length>32765</length>
    <type>LongTextArea</type>
</CustomField>