force-app/main/default/objects/Game_Changer__c/fields/Game_Changer_ID__c.field-meta.xml
<CustomField>
    <fullName>Game_Changer_ID__c</fullName>
    <description>US1214:RTB - OM - Game Changers</description>
    <displayFormat>GC-{00000}</displayFormat>
    <label>Game Changer ID</label>
    <type>AutoNumber</type>
</CustomField>