force-app/main/default/objects/Game_Changer__c/fields/Game_Changer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Game_Changer_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>US-1214:RTB - OM - Game Changers</description>
    <inlineHelpText>The target revenue amount that needs to be achieved for the year</inlineHelpText>
    <label>Game Changer Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>