force-app/main/default/objects/Game_Changer__c/fields/Game_Changer_Revenue_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Game_Changer_Revenue_at_Risk__c</fullName>
    <formula>VALUE(IF
(
(
(Game_Changer_Revenue__c - (Deferred__c + Cancelled__c)) - Opportunity_Current_Year_Won_Revenue__c ) &gt; 0, 

(TEXT
(
(
(
(Game_Changer_Revenue__c - Opportunity_Current_Year_Won_Revenue__c -(Deferred__c + Cancelled__c))*(1-Probability__c)
)
)
)) 
, &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The outstanding revenue amount weighted by the game changer probability</inlineHelpText>
    <label>Game Changer Revenue at Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>