force-app/main/default/objects/Game_Changer__c/fields/Game_Changer_Revenue_Over_and_Above__c.field-meta.xml
<CustomField>
    <fullName>Game_Changer_Revenue_Over_and_Above__c</fullName>
    <formula>VALUE(IF
(
(
(Game_Changer_Revenue__c - (Deferred__c + Cancelled__c)) - Opportunity_Current_Year_Won_Revenue__c ) &lt; 0, 
(TEXT
(
(Opportunity_Current_Year_Won_Revenue__c - Game_Changer_Revenue__c +(Deferred__c + Cancelled__c)
)
)
)
, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The excess amount of revenue based on won opportunities linked</inlineHelpText>
    <label>Game Changer Revenue Over and Above</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>