force-app/main/default/objects/Game_Changer__c/fields/Global_Market_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Global_Market_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DEF-001855:RTB - OM - Game Changers</description>
    <inlineHelpText>Global Markets revenue target</inlineHelpText>
    <label>GM Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>