force-app/main/default/objects/Game_Changer__c/fields/Investment_Banking_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Investment_Banking_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DEF-001855:RTB - OM - Game Changers</description>
    <inlineHelpText>Investment Banking revenue target</inlineHelpText>
    <label>IB Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>