force-app/main/default/objects/Game_Changer__c/fields/Opportunity_Current_Year_Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Current_Year_Won_Revenue__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <inlineHelpText>The current year value of all won opportunities linked to the game changer</inlineHelpText>
    <label>Opportunity Current Year Won Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>