force-app/main/default/objects/Game_Changer__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <label>Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>