force-app/main/default/objects/Game_Changer__c/fields/Progress_Category__c.field-meta.xml
<CustomField>
    <fullName>Progress_Category__c</fullName>
    <description>DEF-001856:RTB - OM - Game Changers</description>
    <inlineHelpText>The game changer progress</inlineHelpText>
    <label>Progress Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stretch</fullName>
            </value>
            <value>
                <fullName>Themes Identified</fullName>
            </value>
            <value>
                <fullName>Clients and Opportunities Identified</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>