force-app/main/default/objects/Game_Changer__c/fields/Stretch__c.field-meta.xml
<CustomField>
    <fullName>Stretch__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <label>Stretch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>