force-app/main/default/objects/Game_Changer__c/fields/Target_Franco__c.field-meta.xml
<CustomField>
    <fullName>Target_Franco__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <label>Target Franco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Developed Markets</fullName>
            </value>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>East Africa</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>Non Presence West Africa</fullName>
            </value>
            <value>
                <fullName>Presence West Africa</fullName>
            </value>
            <value>
                <fullName>South and Central Africa</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Unknown Franco</fullName>
            </value>
            <value>
                <fullName>West Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>