force-app/main/default/objects/Game_Changer__c/fields/Target_Sector__c.field-meta.xml
<CustomField>
    <fullName>Target_Sector__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <label>Target Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Internal / Grouped</fullName>
            </value>
            <value>
                <fullName>Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Power and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Sovereign / Public Sector</fullName>
            </value>
            <value>
                <fullName>Telecoms and Media</fullName>
            </value>
            <value>
                <fullName>Unknown Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>