force-app/main/default/objects/Game_Changer__c/fields/Themes_Identified__c.field-meta.xml
<CustomField>
    <fullName>Themes_Identified__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <label>Themes Identified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>