force-app/main/default/objects/Game_Changer__c/fields/Transactional_Products_and_Services_Reve__c.field-meta.xml
<CustomField>
    <fullName>Transactional_Products_and_Services_Reve__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DEF-001855: RTB - OM - Game Changers</description>
    <inlineHelpText>Transactional Services and Products revenue target</inlineHelpText>
    <label>TPS Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>