force-app/main/default/objects/Game_Changer__c/fields/Unlock_Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Unlock_Obstacles__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <inlineHelpText>The known obstacles to be unlocked to deliver on the game changer</inlineHelpText>
    <label>Unlock Obstacles</label>
    <type>TextArea</type>
</CustomField>