force-app/main/default/objects/Game_Changer__c/fields/Used_in_Budget_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Used_in_Budget_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Game changer is used in budget reporting for annual stretch targets</description>
    <inlineHelpText>Indicates if the Game changer is used in budget reporting for annual stretch targets</inlineHelpText>
    <label>Used in Budget Reporting</label>
    <type>Checkbox</type>
</CustomField>