force-app/main/default/objects/Game_Changer__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>US-1214:RTB - OM - Game Changers</description>
    <inlineHelpText>The year the Game Changer needs to be achieved</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>