force-app/main/default/objects/Game_Changer__c/validationRules/Correct_Progress_Category_field_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Progress_Category_field_value</fullName>
    <active>true</active>
    <description>DEF-001992:RTB - OM - Game Changers
If  Themes identified populated progress category should have Themes Identified populated and if Stretch value is available Progress Category should have Stretch value populated.</description>
    <errorConditionFormula>AND((ISNULL( Clients_and_Opportunities_Identified__c))&amp;&amp; ISNULL( Execution__c)

,OR(
AND(NOT(ISNULL( Themes_Identified__c )),NOT( ISPICKVAL( Progress_Category__c , &quot;Themes identified&quot;) )),

AND(NOT(ISNULL(  Stretch__c )),NOT( ISPICKVAL( Progress_Category__c , &quot;Stretch&quot;) ))
)
)</errorConditionFormula>
    <errorMessage>If Stretch revenue is populated then the Progress Category must be Stretch or If Themes Identified revenue is populated then the Progress Category must be Themes Identified</errorMessage>
</ValidationRule>