force-app/main/default/objects/Game_Changer__c/validationRules/set_default_currency_to_ZAR.validationRule-meta.xml
<ValidationRule>
    <fullName>set_default_currency_to_ZAR</fullName>
    <active>true</active>
    <description>US-1214:RTB - OM - Game Changers</description>
    <errorConditionFormula>NOT( ISPICKVAL( CurrencyIsoCode , &quot;ZAR&quot;))</errorConditionFormula>
    <errorMessage>All Game Changers are managed in ZAR, please set the currency to ZAR and ensure all your revenue numbers are reflecting ZAR amounts</errorMessage>
</ValidationRule>