force-app/main/default/objects/Game_Changer__c/listViews/Game_Changers.listView-meta.xml
<ListView>
    <fullName>Game_Changers</fullName>
    <columns>Game_Changer_ID__c</columns>
    <columns>NAME</columns>
    <columns>Progress_Category__c</columns>
    <columns>Probability__c</columns>
    <columns>Target_Sector__c</columns>
    <columns>Target_Franco__c</columns>
    <columns>Game_Changer_Revenue__c</columns>
    <columns>Opportunity_Current_Year_Won_Revenue__c</columns>
    <columns>Game_Changer_Revenue_at_Risk__c</columns>
    <columns>Game_Changer_Revenue_Over_and_Above__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Game Changers</label>
</ListView>